[gd_scene load_steps=5 format=3 uid="uid://dnimbd6idqvm7"]

[ext_resource type="Script" path="res://Objects/Inventory Items/InventoryDraggableItem.gd" id="1_tti5h"]
[ext_resource type="Resource" uid="uid://ds1uywdq76h67" path="res://Objects/Towers/Tower Data/Red.tres" id="2_y5a6a"]
[ext_resource type="Texture2D" uid="uid://b1kru42ahenrp" path="res://Resources/Sprites/Floppy Disks/Bomb Disk.png" id="3_4wed6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6bud"]
resource_local_to_scene = true
size = Vector2(23.7037, 22.963)

[node name="InventoryDraggableItem" type="Node2D"]
scale = Vector2(1.35, 1.35)
script = ExtResource("1_tti5h")
tower_data = ExtResource("2_y5a6a")
upgrade_property = 5
upgrade_value = 1.0
on_hit_type = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_4wed6")

[node name="Mouse Region" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -16.0
offset_right = -18.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[node name="Area2D" type="Area2D" parent="Sprite2D"]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(3.53213e-07, 0.37037)
shape = SubResource("RectangleShape2D_y6bud")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hover Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="mouse_released" from="." to="." method="_on_mouse_released"]
[connection signal="mouse_entered" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_mouse_exited"]
[connection signal="pressed" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Hover Timer" to="." method="_on_hover_timer_timeout"]
